# Serious-Engine

./: .gitignore
Licenses/: bison_flex_sources
Sources/: CMakeLists.txt
Sources/CMakeConfigs/: BisonFlex.cmake  Ecc.cmake
Sources/Ecc/: CMakeLists.txt  Main.cpp  Main.h  Parser.y  Scanner.l  StdH.h
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  StdH.h
Sources/Engine/Base/: Anim.cpp  Anim.h  Assert.h  Base.h  CRC.cpp  CRC.h  CRCTable.cpp  CTString.cpp  Changeable.cpp  Console.cpp  Directory.cpp  ErrorReporting.cpp  ErrorReporting.h  FileName.cpp  Input.cpp  Input.h  KeyNames.h  ListIterator.inl  Lists.cpp  Lists.h  Lists.inl  Memory.cpp  Memory.h  Parser.y  ParsingSymbols.h  ProgressHook.cpp  Protection.cpp  Protection.h  Relations.cpp  Relations.h  ReplaceFile.cpp  ReplaceFile.h  Serial.cpp  Shell.cpp  ShellTypes.cpp  StackDump.cpp  Statistics.cpp  Stream.cpp  Stream.h  Synchronization.cpp  (+9 more)
Sources/Engine/Brushes/: Brush.cpp  Brush.h  BrushArchive.cpp  BrushExport.cpp  BrushIO.cpp  BrushImport.cpp  BrushMip.cpp  BrushPolygon.cpp  BrushSector.cpp  BrushShadows.cpp  BrushTransformed.h  BrushTriangularize.cpp
Sources/Engine/Classes/: BaseEvents.es  MovableBrushEntity.es  MovableEntity.es  MovableModelEntity.es  PlayerEntity.es
Sources/Engine/Entities/: Entity.cpp  EntityClass.cpp  EntityCollision.cpp  EntityCopying.cpp  EntityProperties.cpp  EntityProperties.h  FieldBSPTesting.cpp  LastPositions.cpp  NearestPolygon.cpp  PlayerCharacter.cpp  ShadingInfo.h
Sources/Engine/GameAgent/: GameAgent.cpp  GameAgent.h  MSLegacy.h
Sources/Engine/Graphics/: Adapter.cpp  Adapter.h  Color.cpp  Color.h  DepthCheck.cpp  DisplayMode.cpp  DrawPort.cpp  DrawPort.h  DrawPort_Particles.cpp  DrawPort_RenderScene.cpp  Fog.cpp  Fog_internal.h  Font.cpp  GfxLibrary.cpp  GfxLibrary.h  Gfx_OpenGL.cpp  Gfx_OpenGL.h  Gfx_OpenGL_Shaders.cpp  Gfx_OpenGL_Shaders.h  Gfx_OpenGL_Textures.cpp  Gfx_wrapper.cpp  Gfx_wrapper.h  Gfx_wrapper_OpenGL.inl  Graphics.cpp  ImageInfo.cpp  MultiMonitor.cpp  Raster.cpp  Shader.cpp  Shader.h  ShadowMap.cpp  Stereo.cpp  Texture.cpp  TextureEffects.cpp  TextureRender.cpp  Vertex.h  ViewPort.cpp  ViewPort.h  gl_functions.h  gl_types.h
Sources/Engine/Light/: LayerMaker.cpp  LayerMixer.cpp  LightSource.cpp
Sources/Engine/Math/: FixInt.h  Float.cpp  Functions.cpp  Geometry.cpp  Geometry_DOUBLE.cpp  Matrix.h  Object3D.cpp  Object3D_CSG.cpp  Object3D_IO.cpp  ObjectSector.cpp  Placement.cpp  Plane.h  Projection.cpp  Projection_Isometric.cpp  Projection_Parallel.cpp  Projection_Perspective.cpp  Projection_Simple.cpp  Projection_Simple_DOUBLE.cpp  Quaternion.h  TextureMapping.cpp  TextureMapping_Utils.cpp  Vector.h
Sources/Engine/Models/: EditModel.cpp  MipMaker.cpp  Model.cpp  ModelObject.h  ModelProfile.cpp  Normals.cpp  RenderModel.cpp  RenderModel_Mask.cpp  RenderModel_View.cpp  VertexGetting.cpp
Sources/Engine/Network/: ActionBuffer.cpp  ActionBuffer.h  Buffer.cpp  CPacket.cpp  CPacket.h  ClientInterface.cpp  CommunicationInterface.cpp  CommunicationInterface.h  Compression.cpp  Diff.cpp  MessageDispatcher.cpp  Network.cpp  NetworkMessage.cpp  NetworkMessage.h  Packet.cpp  PlayerBuffer.cpp  PlayerSource.cpp  PlayerTarget.cpp  Server.cpp  SessionState.cpp
Sources/Engine/Rendering/: RenCache.cpp  Render.cpp  RenderProfile.cpp  Render_internal.h  SelectOnRender.cpp
Sources/Engine/Ska/: AnimSet.cpp  Mesh.cpp  ModelInstance.cpp  RMRender.cpp  RMRenderMask.cpp  Skeleton.cpp  StringTable.cpp  smcPars.y
Sources/Engine/Sound/: SoundData.cpp  SoundData.h  SoundDecoder.cpp  SoundLibrary.cpp  SoundLibrary.h  SoundMixer.cpp  SoundObject.cpp  SoundProfile.cpp  Wave.cpp  WaveFormat.h
Sources/Engine/Templates/: AllocationArray.h  AllocationArray.inl  BSP.h  BSP.inl  BSP_internal.h  DynamicArray.h  DynamicArray.inl  DynamicContainer.h  DynamicContainer.inl  DynamicStackArray.h  DynamicStackArray.inl  LinearAllocator.h  LinearAllocator.inl  NameTable.cpp  NameTable_CTFileName.cpp  NameTable_CTranslationPair.cpp  Selection.h  Selection.inl  StaticArray.h  StaticArray.inl  StaticStackArray.h  StaticStackArray.inl  Stock_CAnimData.cpp  Stock_CAnimSet.cpp  Stock_CEntityClass.cpp  Stock_CMesh.cpp  Stock_CModelData.cpp  Stock_CShader.cpp  Stock_CSkeleton.cpp  Stock_CSoundData.cpp  Stock_CTextureData.cpp
Sources/Engine/Terrain/: ArrayHolder.cpp  ArrayHolder.h  Terrain.cpp  Terrain.h  TerrainArchive.cpp  TerrainArchive.h  TerrainEditing.cpp  TerrainLayer.cpp  TerrainMisc.cpp  TerrainRayCasting.cpp  TerrainRender.cpp  TerrainTile.cpp
Sources/Engine/World/: World.cpp  WorldCSG.cpp  WorldCollision.cpp  WorldCollisionGrid.cpp  WorldIO.cpp  WorldRayCasting.cpp
Sources/EngineGui/: EngineGUI.h
