set(TARGET_NAME Engine)

set(SRC_LIST
    Base/Anim.cpp
    Base/Anim.h
    Base/Assert.h
    Base/Base.h
    Base/Changeable.cpp
    Base/Changeable.h
    Base/ChangeableRT.h
    Base/Console_internal.h
    Base/Console.cpp
    Base/Console.h
    Base/CRC.cpp
    Base/CRC.h
    Base/CRCTable.cpp
    Base/CRCTable.h
    Base/CTString.cpp
    Base/CTString.h
    Base/CTString.inl
    Base/Directory.cpp
    Base/ErrorReporting.cpp
    Base/ErrorReporting.h
    Base/ErrorTable.h
    Base/FileName.cpp
    Base/FileName.h
    Base/GroupFile.h
    Base/IFeel.cpp
    Base/IFeel.h
    Base/Input.cpp
    Base/Input.h
    Base/KeyNames.h
    Base/ListIterator.inl
    Base/Lists.cpp
    Base/Lists.h
    Base/Lists.inl
    Base/Memory.cpp
    Base/Memory.h
    Base/Parser.y
    Base/ParsingSymbols.h
    Base/Priority.inl
    Base/Profiling.cpp
    Base/Profiling.h
    Base/ProfilingEnabled.h
    Base/ProgressHook.cpp
    Base/ProgressHook.h
    Base/Protection.cpp
    Base/Protection.h
    Base/Registry.cpp
    Base/Registry.h
    Base/Relations.cpp
    Base/Relations.h
    Base/ReplaceFile.cpp
    Base/ReplaceFile.h
    Base/Scanner.l
    Base/Serial.cpp
    Base/Serial.h
    Base/Shell_internal.h
    Base/Shell.cpp
    Base/Shell.h
    Base/ShellTypes.cpp
    Base/StackDump.cpp
    Base/Statistics_Internal.h
    Base/Statistics.cpp
    Base/Statistics.h
    Base/Stream.cpp
    Base/Stream.h
    Base/Synchronization.cpp
    Base/Synchronization.h
    Base/Timer.cpp
    Base/Timer.h
    Base/Timer.inl
    Base/Translation.cpp
    Base/Translation.h
    Base/TranslationPair.h
    Base/Types.h
    Base/Unzip.cpp
    Base/Unzip.h
    Base/Updateable.cpp
    Base/Updateable.h
    Base/UpdateableRT.h
    
    Brushes/Brush.cpp
    Brushes/Brush.h
    Brushes/BrushArchive.cpp
    Brushes/BrushArchive.h
    Brushes/BrushBase.h
    Brushes/BrushExport.cpp
    Brushes/BrushImport.cpp
    Brushes/BrushIO.cpp
    Brushes/BrushMip.cpp
    Brushes/BrushPolygon.cpp
    Brushes/BrushSector.cpp
    Brushes/BrushShadows.cpp
    Brushes/BrushTransformed.h
    Brushes/BrushTriangularize.cpp
    
    Entities/Entity.cpp
    Entities/Entity.h
    Entities/EntityClass.cpp
    Entities/EntityClass.h
    Entities/EntityCollision.cpp
    Entities/EntityCollision.h
    Entities/EntityCopying.cpp
    Entities/EntityEvent.h
    Entities/EntityPointer.h
    Entities/EntityProperties.cpp
    Entities/EntityProperties.h
    Entities/FieldBSPTesting.cpp
    Entities/FieldSettings.h
    Entities/InternalClasses.h
    Entities/LastPositions.cpp
    Entities/LastPositions.h
    Entities/NearestPolygon.cpp
    Entities/PlayerCharacter.cpp
    Entities/PlayerCharacter.h
    Entities/Precaching.h
    Entities/ShadingInfo.h
    
    GameAgent/GameAgent.cpp
    GameAgent/GameAgent.h
    GameAgent/MSLegacy.h
    
    Graphics/Adapter.cpp
    Graphics/Adapter.h
    Graphics/Benchmark.cpp
    Graphics/Color.cpp
    Graphics/Color.h
    Graphics/DepthCheck.cpp
    Graphics/DisplayMode.cpp
    Graphics/DisplayMode.h
    Graphics/DrawPort_Particles.cpp
    Graphics/DrawPort_RenderScene.cpp
    Graphics/DrawPort.cpp
    Graphics/DrawPort.h
    Graphics/Fog_internal.h
    Graphics/Fog.cpp
    Graphics/Fog.h
    Graphics/Font.cpp
    Graphics/Font.h
    Graphics/Gfx_OpenGL_Textures.cpp
    Graphics/Gfx_OpenGL.cpp
    Graphics/Gfx_wrapper_OpenGL.cpp
    Graphics/Gfx_wrapper.cpp
    Graphics/Gfx_wrapper.h
    Graphics/GfxLibrary.cpp
    Graphics/GfxLibrary.h
    Graphics/GfxProfile.cpp
    Graphics/Graphics.cpp
    Graphics/ImageInfo.cpp
    Graphics/ImageInfo.h
    Graphics/MultiMonitor.cpp
    Graphics/MultiMonitor.h
    Graphics/Raster.cpp
    Graphics/Raster.h
    Graphics/RenderPoly.h
    Graphics/RenderScene.h
    Graphics/Shader.cpp
    Graphics/Shader.h
    Graphics/ShadowMap.cpp
    Graphics/ShadowMap.h
    Graphics/Stereo.cpp
    Graphics/Stereo.h
    Graphics/Texture.cpp
    Graphics/Texture.h
    Graphics/TextureEffects.cpp
    Graphics/TextureEffects.h
    Graphics/TextureRender.cpp
    Graphics/Vertex.h
    Graphics/ViewPort.cpp
    Graphics/ViewPort.h
    
    Light/Gradient.h
    Light/LayerMaker.cpp
    Light/LayerMixer.cpp
    Light/LensFlares.h
    Light/LightSource.cpp
    Light/LightSource.h
    Light/Shadows_internal.h
    
    Math/AABBox.h
    Math/Clipping.inl
    Math/FixInt.h
    Math/Float.cpp
    Math/Float.h
    Math/Functions.cpp
    Math/Functions.h
    Math/Geometry_DOUBLE.cpp
    Math/Geometry.cpp
    Math/Geometry.h
    Math/Geometry.inl
    Math/Matrix.h
    Math/OBBox.h
    Math/Object3D_CSG.cpp
    Math/Object3D_IO.cpp
    Math/Object3D.cpp
    Math/Object3D.h
    Math/ObjectSector.cpp
    Math/Placement.cpp
    Math/Placement.h
    Math/Plane.h
    Math/Projection_DOUBLE.h
    Math/Projection_Isometric.cpp
    Math/Projection_Parallel.cpp
    Math/Projection_Perspective.cpp
    Math/Projection_Simple_DOUBLE.cpp
    Math/Projection_Simple.cpp
    Math/Projection.cpp
    Math/Projection.h
    Math/Quaternion.h
    Math/TextureMapping_Utils.cpp
    Math/TextureMapping_Utils.h
    Math/TextureMapping.cpp
    Math/TextureMapping.h
    Math/Vector.h
    
    Models/EditModel.cpp
    Models/EditModel.h
    Models/MipMaker.cpp
    Models/MipMaker.h
    Models/Model_internal.h
    Models/Model.cpp
    Models/Model.h
    Models/ModelData.h
    Models/ModelObject.h
    Models/ModelProfile.cpp
    Models/ModelProfile.h
    Models/Normals.cpp
    Models/Normals.h
    Models/RenderModel_internal.h
    Models/RenderModel_Mask.cpp
    Models/RenderModel_View.cpp
    Models/RenderModel.cpp
    Models/RenderModel.h
    Models/VertexGetting.cpp
    
    Network/ActionBuffer.cpp
    Network/ActionBuffer.h
    Network/Buffer.cpp
    Network/Buffer.h
    Network/ClientInterface.cpp
    Network/ClientInterface.h
    Network/Common.h
    Network/CommunicationInterface.cpp
    Network/CommunicationInterface.h
    Network/Compression.cpp
    Network/Compression.h
    Network/CPacket.cpp
    Network/CPacket.h
    Network/Diff.cpp
    Network/Diff.h
    Network/EMsgBuffer.cpp
    Network/EMsgBuffer.h
    Network/EntityHashing.cpp
    Network/EntityHashing.h
    Network/LevelChange.h
    Network/MessageDispatcher.cpp
    Network/MessageDispatcher.h
    Network/Network.cpp
    Network/Network.h
    Network/NetworkMessage.cpp
    Network/NetworkMessage.h
    Network/NetworkProfile.cpp
    Network/NetworkProfile.h
    Network/Packet.cpp
    Network/Packet.h
    Network/PlayerBuffer.cpp
    Network/PlayerBuffer.h
    Network/PlayerSource.cpp
    Network/PlayerSource.h
    Network/PlayerTarget.cpp
    Network/PlayerTarget.h
    Network/Server.cpp
    Network/Server.h
    Network/SessionSocket.h
    Network/SessionState.cpp
    Network/SessionState.h
    
    Rendering/RenCache.cpp
    Rendering/RendASER.cpp
    Rendering/RendClip.cpp
    Rendering/Render_internal.h
    Rendering/Render.cpp
    Rendering/Render.h
    Rendering/RenderAdding.cpp
    Rendering/RenderBrushes.cpp
    Rendering/RenderModels.cpp
    Rendering/RenderProfile.cpp
    Rendering/RenderProfile.h
    Rendering/RendMisc.cpp
    Rendering/SelectOnRender.cpp
    
    Ska/AnimSet.cpp
    Ska/AnimSet.h
    Ska/Mesh.cpp
    Ska/Mesh.h
    Ska/ModelInstance.cpp
    Ska/ModelInstance.h
    Ska/ParsingSmbs.h
    Ska/Render.h
    Ska/RMRender.cpp
    Ska/RMRenderMask.cpp
    Ska/Skeleton.cpp
    Ska/Skeleton.h
    Ska/smcPars.y
    Ska/smcScan.l
    Ska/StringTable.cpp
    Ska/StringTable.h

    Sound/SoundData.cpp
    Sound/SoundData.h
    Sound/SoundDecoder.cpp
    Sound/SoundDecoder.h
    Sound/SoundLibrary.cpp
    Sound/SoundLibrary.h
    Sound/SoundListener.h
    Sound/SoundMixer.cpp
    Sound/SoundObject.cpp
    Sound/SoundObject.h
    Sound/SoundProfile.cpp
    Sound/SoundProfile.h
    Sound/Wave.cpp
    Sound/Wave.h
    
    Templates/AllocationArray.cpp
    Templates/AllocationArray.h
    Templates/BSP_internal.h
    Templates/BSP.cpp
    Templates/BSP.h
    Templates/DynamicArray.cpp
    Templates/DynamicArray.h
    Templates/DynamicContainer.cpp
    Templates/DynamicContainer.h
    Templates/DynamicStackArray.cpp
    Templates/DynamicStackArray.h
    Templates/HashTableTemplate.cpp
    Templates/HashTableTemplate.h
    Templates/LinearAllocator.cpp
    Templates/LinearAllocator.h
    Templates/NameTable_CTFileName.cpp
    Templates/NameTable_CTFileName.h
    Templates/NameTable_CTranslationPair.cpp
    Templates/NameTable_CTranslationPair.h
    Templates/NameTable.cpp
    Templates/NameTable.h
    Templates/Selection.cpp
    Templates/Selection.h
    Templates/StaticArray.cpp
    Templates/StaticArray.h
    Templates/StaticStackArray.cpp
    Templates/StaticStackArray.h
    Templates/Stock_CAnimData.cpp
    Templates/Stock_CAnimData.h
    Templates/Stock_CAnimSet.cpp
    Templates/Stock_CAnimSet.h
    Templates/Stock_CEntityClass.cpp
    Templates/Stock_CEntityClass.h
    Templates/Stock_CMesh.cpp
    Templates/Stock_CMesh.h
    Templates/Stock_CModelData.cpp
    Templates/Stock_CModelData.h
    Templates/Stock_CShader.cpp
    Templates/Stock_CShader.h
    Templates/Stock_CSkeleton.cpp
    Templates/Stock_CSkeleton.h
    Templates/Stock_CSoundData.cpp
    Templates/Stock_CSoundData.h
    Templates/Stock_CTextureData.cpp
    Templates/Stock_CTextureData.h
    Templates/Stock.cpp
    Templates/Stock.h
    
    Terrain/ArrayHolder.cpp
    Terrain/ArrayHolder.h
    Terrain/Terrain.cpp
    Terrain/Terrain.h
    Terrain/TerrainArchive.cpp
    Terrain/TerrainArchive.h
    Terrain/TerrainEditing.cpp
    Terrain/TerrainEditing.h
    Terrain/TerrainLayer.cpp
    Terrain/TerrainLayer.h
    Terrain/TerrainMisc.cpp
    Terrain/TerrainMisc.h
    Terrain/TerrainRayCasting.cpp
    Terrain/TerrainRayCasting.h
    Terrain/TerrainRender.cpp
    Terrain/TerrainRender.h
    Terrain/TerrainTile.cpp
    Terrain/TerrainTile.h
    
    World/PhysicsProfile.cpp
    World/PhysicsProfile.h
    World/World.cpp
    World/World.h
    World/WorldCollision.cpp
    World/WorldCollision.h
    World/WorldCollisionGrid.cpp
    World/WorldCSG.cpp
    World/WorldEditingProfile.cpp
    World/WorldEditingProfile.h
    World/WorldIO.cpp
    World/WorldRayCasting.cpp
    World/WorldRayCasting.h
    World/WorldSettings.h
    
    Build.h
    CurrentVersion.h
    Engine.cpp
    Engine.h
    GameShell.h
    
    StdH.h
)

set(CLASSES_LIST
    Classes/BaseEvents.es
    Classes/MovableBrushEntity.es
    Classes/MovableEntity.es
    Classes/MovableModelEntity.es
    Classes/PlayerEntity.es
)

add_library(${TARGET_NAME} SHARED ${SRC_LIST} ${CLASSES_LIST})
add_classes(${TARGET_NAME} ${CLASSES_LIST})
add_dependencies(${TARGET_NAME} Ecc)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SRC_LIST} ${CLASSES_LIST})

target_precompile_headers(${TARGET_NAME} PRIVATE StdH.h)

bison_add(${TARGET_NAME} Base/Parser.y)
flex_add(${TARGET_NAME} Base/Scanner.l)

bison_add(${TARGET_NAME} Ska/smcPars.y)
flex_add(${TARGET_NAME} Ska/smcScan.l)
